2006-12-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/*: Cleanups and fixes, including for compilation
	problems with Perl. (Derives from some macro expansion for THR.)

2006-12-01  Benoit Jacob <jacob@math.jussieu.fr>

	* src/grid.h, src/grid.cpp: In class OBFloatGrid:
	cleanup and simplifications, minor optimizations, add a FIXME
	comment in operator<< about endianness issues, replace a dangerous
	memset by a for loop. (This memset relied on the fact that the
	floating-point value 0.0 is represented by the bits 0....0, which
	happens to be true, but is not something we want to depend on.
	Plus, compilers are/should be clever enough to make the for loop
	just as fast.)

2006-11-29  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/openbabel-python.i: Added some SWIG magic that allows the
	creation of a C doubles array. Also added a Python convenience
	function that converts a list to a C doubles array. This will allow
	users to access functions such as OBMol::Rotate.

2006-11-29  Benoit Jacob <jacob@math.jussieu.fr>

	* math/vector3.cpp: fix a bug that I had introduced a few days ago
	in createOrthoVector. Thanks go to the new unittests.

	* math/matrix3x3.h, math/matrix3x3.cpp: fix some defines in the
	same way as in vector3.h, add both constant and non-constant
	operator()(int,int) to access the matrix elements easily.
	Fix isUnit(), isOrthogonal(), isDiagonal().

	* test/math.cpp, test/Makefile.am, test/Makefile.in:
	New tests for the math/ subdirectory. Covers the constructors, access
	methods, various operators, operations on rows and columns and
	(partly, will be completed) the distances/angles/orthogonality stuff.

	* src/obutil.h: add new function IsNegligible(), checks whether a is
	much smaller than b with given precision.

2006-11-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* tools/obrotate.cpp: Use a simpler implementation with
	OBMol::SetTorsion(). (Need to rewrite command-line parsing to